--- a/public/project/index.html
+++ b/public/project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--<html lang="en" ng-app="WebAppMaker">-->
+<html lang="en" ng-app="WebAppMaker">
 <html lang="en">
 <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -7,21 +7,21 @@
     <meta name="viewport" content="initial-scale=1.25, user-scalable = no">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
-    <link href="CSS/jquery-ui.css" rel="stylesheet"/>
-    <link href="CSS/style.css" rel="stylesheet"/>
-    <link href="CSS/textAngular.css" rel="stylesheet"/>
+    <link href="css/jquery-ui.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <link href="css/textAngular.css" rel="stylesheet"/>
 
     <!--<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>-->
     <!--<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>-->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>-->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.min.js"></script>-->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-rangy.min.js"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js"></script>-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-sanitize.js"></script>-->
 
-    <script src="JS/app.js"></script>
-    <!--<script src="JS/route.js"></script>-->
+    <script src="js/app.js"></script>
+    <script src="js/route.js"></script>
 
     <!--<script src="JS/services/user.service.client.js"></script>-->
     <!--<script src="JS/services/website.service.client.js"></script>-->
@@ -46,6 +46,6 @@
 
 </head>
 <body>
-<!--<div ng-view></div>-->
+<div ng-view></div>
 </body>
 </html>
