--- a/public/project/index.html
+++ b/public/project/index.html
@@ -22,6 +22,8 @@
 
     <script src="js/app.js"></script>
     <script src="js/route.js"></script>
+    <script src="views/player.controller.client.js"></script>
+    <script src="services/player.service.client.js"></script>
 
     <!--<script src="JS/services/user.service.client.js"></script>-->
     <!--<script src="JS/services/website.service.client.js"></script>-->
