--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Web Dev Course Home Page</title>
+    <title>CS 3200 Final Project</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Player List</h1>
-
+<div class="container-fluid">
+    <h1>Northeastern Men's Rugby Roster</h1>
+    <h2>Authors</h2>
     <p>
-        Customize this home page to your linking.
+        Howard Cheung <br>
+        Grant Merrill
     </p>
-
-    <h2>Required links</h2>
-    <ul>
-        <li>
-            <a href="project/index.html">Project</a>
-        </li>
-        <li>
-            <a href="assignment/index.html">Assignment</a>
-        </li>
-        <li>
-            <a href="test/index.html">Test MongoDB</a>
-        </li>
-        <li>
-            <a href="https://github.com/jannunzi/web-dev-template">Your public repository at GitHub.com</a>
-        </li>
-    </ul>
+    <a href="project/index.html">Click here to view front end</a>
+</div>
 </body>
 </html>
