--- a/public/project/index.html
+++ b/public/project/index.html
@@ -22,7 +22,7 @@
 
     <script src="js/app.js"></script>
     <script src="js/route.js"></script>
-    <script src="views/player.controller.client.js"></script>
+    <script src="views/players/player.controller.client.js"></script>
     <script src="services/player.service.client.js"></script>
 
     <!--<script src="JS/services/user.service.client.js"></script>-->
@@ -30,21 +30,9 @@
     <!--<script src="JS/services/page.service.client.js"></script>-->
     <!--<script src="JS/services/widget.service.client.js"></script>-->
 
-    <!--<script src="views/User/login.controller.client.js"></script>-->
+    <script src="views/User/login.controller.client.js"></script>
     <!--<script src="views/User/profile.controller.client.js"></script>-->
     <!--<script src="views/User/register.controller.client.js"></script>-->
-
-    <!--<script src="views/Website/website-list.controller.client.js"></script>-->
-    <!--<script src="views/Website/website-edit.controller.client.js"></script>-->
-    <!--<script src="views/Website/website-new.controller.client.js"></script>-->
-
-    <!--<script src="views/Page/page-list.controller.client.js"></script>-->
-    <!--<script src="views/Page/page-edit.controller.client.js"></script>-->
-    <!--<script src="views/Page/page-new.controller.client.js"></script>-->
-
-    <!--<script src="views/Widget/widget-list.controller.client.js"></script>-->
-    <!--<script src="views/Widget/widget-edit.controller.client.js"></script>-->
-    <!--<script src="views/Widget/widget-new.controller.client.js"></script>-->
 
 </head>
 <body>
