--- a/public/project/index.html
+++ b/public/project/index.html
@@ -11,28 +11,27 @@
     <link href="css/style.css" rel="stylesheet"/>
     <link href="css/textAngular.css" rel="stylesheet"/>
 
-    <!--<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>-->
-    <!--<script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>-->
+    <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
+    <script src="http://code.jquery.com/ui/1.8.21/jquery-ui.min.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-rangy.min.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-sanitize.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-rangy.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.0/textAngular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textAngular/1.5.1/textAngular-sanitize.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/route.js"></script>
     <script src="views/players/player.controller.client.js"></script>
-    <script src="services/player.service.client.js"></script>
+    <script src="js/services/player.service.client.js"></script>
 
-    <!--<script src="JS/services/user.service.client.js"></script>-->
+    <script src="js/services/user.service.client.js"></script>
     <!--<script src="JS/services/website.service.client.js"></script>-->
     <!--<script src="JS/services/page.service.client.js"></script>-->
     <!--<script src="JS/services/widget.service.client.js"></script>-->
 
     <script src="views/User/login.controller.client.js"></script>
-    <!--<script src="views/User/profile.controller.client.js"></script>-->
-    <!--<script src="views/User/register.controller.client.js"></script>-->
+    <script src="views/User/register.controller.client.js"></script>
 
 </head>
 <body>
